[gd_scene load_steps=5 format=2]

[ext_resource path="res://res/fonts/NotoSans-Bold.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/UI/MainMenu.gd" type="Script" id=2]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 0, 0, 0, 0.784314, 0, 0, 0, 0.470588 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[node name="MainMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
texture = SubResource( 2 )
patch_margin_left = 50
patch_margin_top = 50
patch_margin_right = 50
patch_margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Status" type="Label" parent="NinePatchRect"]
anchor_right = 1.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonContainer" type="VBoxContainer" parent="NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -169.5
margin_top = -132.5
margin_right = 169.5
margin_bottom = 132.5
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuLabel" type="Label" parent="NinePatchRect/ButtonContainer"]
margin_left = 19.0
margin_right = 319.0
margin_bottom = 45.0
rect_min_size = Vector2( 300, 23 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 1 )
text = "Pong 3D"
align = 1

[node name="UsernameLabel" type="Label" parent="NinePatchRect/ButtonContainer"]
margin_left = 19.0
margin_top = 54.0
margin_right = 319.0
margin_bottom = 84.0
rect_min_size = Vector2( 300, 30 )
size_flags_horizontal = 4
text = "Username"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameInput" type="TextEdit" parent="NinePatchRect/ButtonContainer"]
margin_left = 19.0
margin_top = 95.0
margin_right = 319.0
margin_bottom = 130.0
rect_min_size = Vector2( 300, 35 )
hint_tooltip = "IP Address"
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Player 1"

[node name="SinglePlayerButton" type="Button" parent="NinePatchRect/ButtonContainer"]
margin_left = 19.0
margin_top = 140.0
margin_right = 319.0
margin_bottom = 175.0
rect_min_size = Vector2( 300, 35 )
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Single player"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MultiPlayerButton" type="Button" parent="NinePatchRect/ButtonContainer"]
margin_left = 19.0
margin_top = 185.0
margin_right = 319.0
margin_bottom = 220.0
rect_min_size = Vector2( 300, 35 )
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Multiplayer"

[node name="QuitButton" type="Button" parent="NinePatchRect/ButtonContainer"]
margin_left = 19.0
margin_top = 230.0
margin_right = 319.0
margin_bottom = 265.0
rect_min_size = Vector2( 300, 35 )
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Quit"
[connection signal="pressed" from="NinePatchRect/ButtonContainer/SinglePlayerButton" to="." method="_on_SinglePlayerButton_pressed"]
[connection signal="pressed" from="NinePatchRect/ButtonContainer/MultiPlayerButton" to="." method="_on_MultiPlayerButton_pressed"]
[connection signal="pressed" from="NinePatchRect/ButtonContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
